--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -9,6 +9,9 @@
   background-color: $bckg-btn;
   box-shadow: 0px 15px 15px rgba(227, 184, 115, 0.15);
   cursor: pointer;
+  transition-property: background-color, color, box-shadow;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
 
   a {
     display: flex;
@@ -18,6 +21,11 @@
     justify-content: center;
     text-decoration: none;
     color: $link-color-btn;
+  }
+
+  &:hover {
+    background-color: transparent;
+    box-shadow: 0 0 15px 5px $gold_color;
   }
 }
 
@@ -33,6 +41,7 @@
   @include yeseva-font(0.9rem, $white_color, uppercase);
   background-color: $back-dark;
   cursor: default;
+  transition: bottom .5s ease-in;
 
   .scroll-btn__inner-icon {
     width: 29px;
@@ -44,6 +53,10 @@
 
   @media screen and (max-width: 650px) {
     display: none;
+  }
+
+  &:hover {
+    bottom: -72px;
   }
 }
 
@@ -59,6 +72,12 @@
   background-repeat: no-repeat;
   background-position: center;
   cursor: pointer;
+  transition: width .2s ease-in, height .2s ease-in;
+
+  &:hover {
+    width: 65px;
+    height: 65px;
+  }
 
   @media screen and (max-width: 450px) {
     width: 37px;
