--- a/scss/components/_pagination-btn.scss
+++ b/scss/components/_pagination-btn.scss
@@ -14,6 +14,11 @@
     transform: rotate(180deg);
     background-image: url("../assets/img/arrow-raw.png");
     cursor: pointer;
+    transition: width .5s ease-out;
+
+    &:hover {
+      width: 84px;
+    }
   }
 
   .control-dot {
@@ -41,5 +46,10 @@
     margin-left: 30px;
     background-image: url("../assets/img/arrow-raw.png");
     cursor: pointer;
+    transition: width .5s ease-out;
+
+    &:hover {
+      width: 84px;
+    }
   }
 }
