--- a/scss/layout/_on-control.scss
+++ b/scss/layout/_on-control.scss
@@ -29,6 +29,10 @@
 
     button {
       @include main-btn(200px, 50px, $font-futura, 0.9rem);
+
+      &:hover {
+        color: $dark_color;
+      }
     }
   }
 }
