fix: change font-size for mob view

--- a/scss/layout/_design-project.scss
+++ b/scss/layout/_design-project.scss
@@ -27,6 +27,11 @@
   @media screen and (max-width: 1310px) {
     color: $white_color;
   }
+
+  @media screen and (max-width: 450px) {
+    font-size: 0.9rem;
+    line-height: 1.35;
+  }
 }
 
 .design-project__gallery {
