fix: control btn animation fix priority

--- a/scss/components/_pagination-btn.scss
+++ b/scss/components/_pagination-btn.scss
@@ -17,7 +17,7 @@
     transition: width .5s ease-out;
 
     &:hover {
-      width: 84px;
+      width: 84px !important;
     }
   }
 
@@ -49,7 +49,7 @@
     transition: width .5s ease-out;
 
     &:hover {
-      width: 84px;
+      width: 84px !important;
     }
   }
 }
