--- a/scss/components/_pagination-btn.scss
+++ b/scss/components/_pagination-btn.scss
@@ -14,10 +14,10 @@
     transform: rotate(180deg);
     background-image: url("../assets/img/arrow-raw.png");
     cursor: pointer;
-    transition: width .5s ease-out;
+    transition: transform .3s ease-out .2s;
 
     &:hover {
-      width: 84px !important;
+      transform: rotate(-180deg);
     }
   }
 
@@ -44,12 +44,13 @@
     width: 42px;
     height: 14px;
     margin-left: 30px;
+    transform: rotate(0);
     background-image: url("../assets/img/arrow-raw.png");
     cursor: pointer;
-    transition: width .5s ease-out;
+    transition: transform .3s ease-out .2s;
 
     &:hover {
-      width: 84px !important;
+      transform: rotate(360deg);
     }
   }
 }
