--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -31,6 +31,10 @@
     width: 40%;
     justify-content: space-around;
 
+    @media screen and (max-width: 1170px) {
+      width: 47%;
+    }
+
     @media screen and (max-width: 768px) {
       display: block;
       width: 100%;
@@ -65,6 +69,10 @@
 
       &::placeholder {
         color: inherit;
+      }
+
+      @media screen and (max-width: 1170px) {
+        border-bottom: 1px solid $grey_color;
       }
 
       @media screen and (max-width: 450px) {
@@ -140,5 +148,17 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 input[type="number"] {
-  -moz-appearance:textfield;
+  -moz-appearance: textfield;
+}
+
+@-webkit-keyframes autofill {
+  to {
+    color: inherit;
+    background: transparent;
+  }
+}
+
+input:-webkit-autofill {
+  -webkit-animation-name: autofill;
+  -webkit-animation-fill-mode: both;
 }
